<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:id="@+id/activity_mainpage"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".my_information.My_information">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/half_normal_padding"
        android:layout_marginTop="@dimen/normal_padding"
        >
        <com.cloude.xmut.my_information.RoundImageView
            android:id="@+id/roundImageView"
            android:src="@drawable/image1"
            android:layout_width="100dip"
            android:layout_height="100dip"
            android:background="@color/nocolor"
            android:layout_centerInParent="true" />
    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#22000000"
        />

    <RelativeLayout
        android:id="@+id/Nick_Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/normal_padding"
        android:clickable="true"
        android:focusable="true"
        android:onClick="Nick_Name_Click"
        >
        <TextView
            style="?android:attr/borderlessButtonStyle"
            android:textSize="@dimen/my_information_size"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/nick_name"   />
        <TextView
            android:id="@+id/Nick_Name_Value"
            android:textSize="@dimen/my_information_size"
            android:textColor="@color/DimGray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            />
    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#22000000" />

    <RelativeLayout
        android:id="@+id/Gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/normal_padding"
        android:clickable="true"
        android:focusable="true"
        android:onClick="Gender_Click">
        <TextView
            style="?android:attr/borderlessButtonStyle"
            android:textSize="@dimen/my_information_size"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"   />

        <TextView
            android:id="@+id/Gender_Value"
            android:textSize="@dimen/my_information_size"
            android:textColor="@color/DimGray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#22000000" />

    <RelativeLayout
        android:id="@+id/Age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/normal_padding"
        android:clickable="true"
        android:focusable="true"
        android:onClick="Age_Click"        >
        <TextView
            style="?android:attr/borderlessButtonStyle"
            android:textSize="@dimen/my_information_size"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age"   />
        <TextView
            android:id="@+id/Age_Value"
            android:textSize="@dimen/my_information_size"
            android:textColor="@color/DimGray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#22000000" />

    <RelativeLayout
        android:id="@+id/Personal_Note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/normal_padding"
        android:clickable="true"
        android:focusable="true"
        android:onClick="Personal_Note_Click"
        >
        <TextView
            style="?android:attr/borderlessButtonStyle"
            android:textSize="@dimen/my_information_size"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personal_note"   />

        <TextView

            android:id="@+id/Personal_Note_Value"
            android:textSize="@dimen/my_information_size"
            android:textColor="@color/DimGray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="16"
            android:text="@string/app_name"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            />

    </RelativeLayout>


    <View android:layout_width="match_parent"
    android:layout_height="1dp"
    android:background="#22000000" />


    <RelativeLayout
        android:id="@+id/about_us"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_padding">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#22000000" />
        <TextView
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aboutus"
            android:textSize="@dimen/my_information_size"
            android:textColor="@color/black"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#22000000" />
        <TextView
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            android:textSize="@dimen/my_information_size"
            android:textColor="@color/black"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#22000000" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            style="?android:attr/borderlessButtonStyle"

            android:id="@+id/exit_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/login_out"
            android:textSize="@dimen/my_information_size"  />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#22000000" />



    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#22000000" />

    <include
        layout="@layout/home_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"/>




</LinearLayout>