<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100sp">

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="140sp"
            android:layout_height="wrap_content"
            android:text="@string/name_login"
            android:textSize="30sp" />
        <EditText
            android:id="@+id/account_register"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight='1'
            android:inputType="text"
            android:textSize="30sp"
            >
            <requestFocus/>
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="140sp"
            android:layout_height="wrap_content"
            android:text="@string/password_login"
            android:textSize="30sp"/>
        <EditText
            android:id="@+id/password_register1"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight='1'
            android:inputType="textPassword"
            android:textSize="30sp"
            >
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="140sp"
            android:layout_height="wrap_content"
            android:text="@string/password_login2"
            android:textSize="30sp"/>
        <EditText
            android:id="@+id/password_register2"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight='1'
            android:inputType="textPassword"
            android:textSize="30sp"
            >
        </EditText>
    </LinearLayout>
    <Button
        android:id="@+id/Register1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_button"
        android:textSize="30dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:background="@drawable/circular_shape"/>
</LinearLayout>